# checklist_backend

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  start.py
migration/: env.py
migration/versions/: 0b87c1eaa6a8_add_unique.py  212c959546c3_add_checklist_store.py  25d8f7a59a0b_role_checklist_and_commentary_field.py  27d537de5d6a_init_migration.py  2ee0fe0899df_role_parent.py  4e0ae656fd1f_roles_script.py  5e9763b87d21_add_report.py  73a8c9c59959_naming_convention.py  b28104285122_remove_uniq.py  b299d4063e41_add_parent_to_user.py  bedeb89db668_init.py  de4e1913f970_roles_stores_employees.py  fdd980a40bae_add_component_base_role.py
src/: main.py  migration.py
src/api/: __init__.py
src/api/endpoints/: auth.py  checklist.py  role.py  (+11 more)
src/core/: config.py  database.py
src/models/: __init__.py  checklist.py  checklist_user_report.py  component.py  employee.py  role.py  role_checklist.py  role_component.py  store.py  store_checklist.py  store_employee.py  store_user.py  user.py  user_checklist.py  user_role.py
src/repositories/: base.py  checklist.py  checklist_user_report.py  component.py  constructor.py  employee.py  file.py  role.py  role_checklist.py  role_component.py  store.py  store_checklist.py  store_employee.py  store_user.py  user.py  user_checklist.py  user_role.py
src/schemas/: __init__.py  base.py  checklist.py  checklist_user_report.py  component.py  employee.py  role.py  role_checklist.py  role_component.py  store.py  store_checklist.py  store_employee.py  store_user.py  user.py  user_checklist.py  user_role.py
src/services/: auth.py
