[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.42",
    "argon2-cffi>=25.1.0",
    "uvicorn>=0.35.0",
    "psycopg>=3.2.9",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.5.0",
]
